--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -15,3 +15,5 @@ enable_feature('clangxx', "@CLANGXX_BINARY@")
 enable_feature('clang', "@CLANG_BINARY@")
 enable_feature('lldb', "@LLDB_BINARY@")
 enable_feature('lld', "@LLD_BINARY@")
+enable_feature('scan-build', "@SCANBUILD_BINARY@")
+enable_feature('scan-view', "@SCANVIEW_BINARY@")
