--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
           packages:
             - clang-$LLVM_VERSION
             - clang-tidy-$LLVM_VERSION
-            - llvm-${LLVM_VERSION}-tools
+            - 'llvm-'$LLVM_VERSION'-tools'
 
 script:
   - mkdir build && cd build
