--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ jobs:
             - llvm-10-tools
             - libomp-10-dev
             - libc++-10-dev
+            - libstdc++-9-dev
 
 script:
   - mkdir build && cd build
