--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,9 @@ find_program_or_warn(LLDB lldb)
 find_program_or_warn(SCANBUILD scan-build)
 find_program_or_warn(SCANVIEW scan-view)
 
+option(ENABLE_COMPILER_RT "assume compiler-rt is available" ON)
+option(ENABLE_LIBCXX "assume libc++ is available" ON)
+
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/tests/lit.site.cfg.in
     ${CMAKE_BINARY_DIR}/tests/lit.site.cfg
