show unsupported & xfail tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,4 @@ configure_file(
     ${CMAKE_BINARY_DIR}/tests/lit.site.cfg
     )
 
-add_custom_target(check ${LIT} -sv tests)
+add_custom_target(check ${LIT} --show-unsupported --show-xfail -sv tests)
