Fix scan-build test case
Fix requires and features and scan-view run.

--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -21,8 +21,8 @@ enable_program('clangxx', "@CLANGXX_BINARY@")
 enable_program('clang', "@CLANG_BINARY@")
 enable_program('lldb', "@LLDB_BINARY@")
 enable_program('lld', "@LLD_BINARY@")
-enable_program('scan-build', "@SCANBUILD_BINARY@")
-enable_program('scan-view', "@SCANVIEW_BINARY@")
+enable_program('scan-build', "@SCANBUILD@")
+enable_program('scan-view', "@SCANVIEW@")
 
 enable_feature("compiler-rt", "@ENABLE_COMPILER_RT@")
 enable_feature("libc++", "@ENABLE_LIBCXX@")
