--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,8 @@ find_program_or_warn(CLANGXX_BINARY clang++)
 find_program_or_warn(CLANG_BINARY clang)
 find_program_or_warn(CLANG_TIDY_BINARY clang-tidy)
 find_program_or_warn(LLVMNM llvm-nm)
-find_program_or_warn(LLD lld)
-find_program_or_warn(LLDB lldb)
+find_program_or_warn(LLD_BINARY lld)
+find_program_or_warn(LLDB_BINARY lldb)
 find_program_or_warn(SCANBUILD scan-build)
 find_program_or_warn(SCANVIEW scan-view)
 
