--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -21,6 +21,7 @@ enable_program('clang-tidy', "@CLANG_TIDY_BINARY@")
 enable_program('clangxx', "@CLANGXX_BINARY@")
 enable_program('clang', "@CLANG_BINARY@")
 enable_program('llvm-nm', "@LLVMNM@")
+enable_program('llvm-config', "@LLVMCONFIG_BINARY@")
 enable_program('lldb', "@LLDB_BINARY@")
 enable_program('lld', "@LLD_BINARY@")
 enable_program('scan-build', "@SCANBUILD@")
