--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ script: |
           -DCLANG_TIDY_BINARY=/usr/bin/clang-tidy-10 \
           -DLLD_BINARY=/usr/bin/lld-10 \
           -DLLDB_BINARY=/usr/bin/lldb-10 \
+          -DLLVMCONFIG_BINARY=/usr/bin/llvm-config-10 \
           -DSCANBUILD=/usr/bin/scan-build-10 \
           -DCLANG_TIDY_BINARY=/usr/bin/clang-tidy-10 \
           -DSCANVIEW=/usr/bin/scan-view-10 \
