--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ script: |
           -DCLANG_TIDY_BINARY=/usr/bin/clang-tidy-10 \
           -DSCANVIEW=/usr/bin/scan-view-10 \
           -DLLVMNM=/usr/bin/llvm-nm-10 \
+          -DLLVMPROFDATA=/usr/bin/llvm-profdata-10 \
           -DENABLE_COMPILER_RT=OFF \
           -DENABLE_LIBCXX=ON \
           -DLLVM_CMAKE_PREFIX_PATH=/usr/lib/llvm-10/lib/cmake/ ../ && \
