--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ find_program_or_warn(CLANG_TIDY_BINARY clang-tidy)
 find_program_or_warn(CLANG_FORMAT_BINARY clang-format)
 find_program_or_warn(OPT_BINARY opt)
 find_program_or_warn(LLVMNM llvm-nm)
+find_program_or_warn(LLVMPROFDATA llvm-profdata)
 find_program_or_warn(LLD_BINARY lld)
 find_program_or_warn(LLDB_BINARY lldb)
 find_program_or_warn(LLVMCONFIG_BINARY llvm-config)
