--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -18,6 +18,7 @@ def enable_program(name, binary):
 
 # The order matters
 enable_program('clang-tidy', "@CLANG_TIDY_BINARY@")
+enable_program('clang-format-diff', "@CLANG_FORMAT_DIFF_BINARY@")
 enable_program('clang-format', "@CLANG_FORMAT_BINARY@")
 enable_program('clangxx', "@CLANGXX_BINARY@")
 enable_program('clang', "@CLANG_BINARY@")
