--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ script: |
           -DCLANGXX_BINARY=/usr/bin/clang++-10 \
           -DCLANG_TIDY_BINARY=/usr/bin/clang-tidy-10 \
           -DCLANG_FORMAT_BINARY=/usr/bin/clang-format-10 \
+          -DCLANG_FORMAT_DIFF_BINARY=/usr/bin/clang-format-diff-10 \
           -DLLD_BINARY=/usr/bin/lld-10 \
           -DLLDB_BINARY=/usr/bin/lldb-10 \
           -DLLVMCONFIG_BINARY=/usr/bin/llvm-config-10 \
