--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,7 +46,7 @@ jobs:
            -DSCANVIEW=/usr/bin/scan-view-${{ matrix.version }} \
            -DLLVMNM=/usr/bin/llvm-nm-${{ matrix.version }} \
            -DLLVMPROFDATA=/usr/bin/llvm-profdata-${{ matrix.version }} \
-           -DENABLE_COMPILER_RT=OFF \
+           -DENABLE_COMPILER_RT=ON \
            -DENABLE_LIBCXX=ON \
            ../
          make check
