--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ find_program_or_warn(CLANG_BINARY clang)
 find_program_or_warn(CLANG_TIDY_BINARY clang-tidy)
 find_program_or_warn(CLANG_FORMAT_BINARY clang-format)
 find_program_or_warn(CLANG_FORMAT_DIFF_BINARY clang-format-diff)
+find_program_or_warn(CLANGD_BINARY clangd)
 find_program_or_warn(OPT_BINARY opt)
 find_program_or_warn(LLVMNM llvm-nm)
 find_program_or_warn(LLC llc)
