--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,9 @@ find_program_or_warn(CLANG_FORMAT_BINARY clang-format)
 find_program_or_warn(CLANG_FORMAT_DIFF_BINARY clang-format-diff)
 find_program_or_warn(OPT_BINARY opt)
 find_program_or_warn(LLVMNM llvm-nm)
+find_program_or_warn(LLC llc)
+find_program_or_warn(LLI lli)
+find_program_or_warn(OPT opt)
 find_program_or_warn(LLVMPROFDATA llvm-profdata)
 find_program_or_warn(LLD_BINARY lld)
 find_program_or_warn(LLDB_BINARY lldb)
