--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -23,6 +23,9 @@ enable_program('clang-format', "@CLANG_FORMAT_BINARY@")
 enable_program('clangxx', "@CLANGXX_BINARY@")
 enable_program('clang', "@CLANG_BINARY@")
 enable_program('llvm-nm', "@LLVMNM@")
+enable_program('llc', "@LLC@")
+enable_program('lli', "@LLI@")
+enable_program('opt', "@OPT@")
 enable_program('llvm-profdata', "@LLVMPROFDATA@")
 enable_program('llvm-config', "@LLVMCONFIG_BINARY@")
 enable_program('lldb', "@LLDB_BINARY@")
