--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -26,6 +26,7 @@ enable_program('clang-format', "@CLANG_FORMAT_BINARY@")
 enable_program('clangd', "@CLANGD_BINARY@")
 enable_program('clangxx', "@CLANGXX_BINARY@")
 enable_program('clang', "@CLANG_BINARY@")
+enable_program('llvm-dis', "@LLVMDIS@")
 enable_program('llvm-nm', "@LLVMNM@")
 enable_program('llc', "@LLC@")
 enable_program('lli', "@LLI@")
