--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ find_program_or_warn(LLDB_BINARY lldb)
 find_program_or_warn(LLVMCONFIG_BINARY llvm-config)
 find_program_or_warn(SCANBUILD scan-build)
 find_program_or_warn(SCANVIEW scan-view)
+find_program_or_warn(SCANBUILDPY scan-build-py)
+
 
 option(ENABLE_COMPILER_RT "assume compiler-rt is available" ON)
 option(ENABLE_LIBCXX "assume libc++ is available" ON)
