--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ find_program_or_warn(LLC llc)
 find_program_or_warn(LLI lli)
 find_program_or_warn(OPT opt)
 find_program_or_warn(LLVMPROFDATA llvm-profdata)
+find_program_or_warn(LLVMMT llvm-mt)
 find_program_or_warn(LLD_BINARY lld)
 find_program_or_warn(LLDB_BINARY lldb)
 find_program_or_warn(LLVMCONFIG_BINARY llvm-config)
