--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -30,6 +30,7 @@ enable_program('lli', "@LLI@")
 enable_program('opt', "@OPT@")
 enable_program('llvm-profdata', "@LLVMPROFDATA@")
 enable_program('llvm-config', "@LLVMCONFIG_BINARY@")
+enable_program('llvm-mt', "@LLVMMT_BINARY@")
 enable_program('lldb', "@LLDB_BINARY@")
 enable_program('lld', "@LLD_BINARY@")
 enable_program('scan-build-py', "@SCANBUILDPY@")
