--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ find_program_or_warn(LLVMPROFDATA llvm-profdata)
 find_program_or_warn(LLD_BINARY lld)
 find_program_or_warn(LLDB_BINARY lldb)
 find_program_or_warn(LLVMCONFIG_BINARY llvm-config)
+find_program_or_warn(LLVMOBJDUMP_BINARY llvm-objdump)
 find_program_or_warn(SCANBUILD scan-build)
 find_program_or_warn(SCANVIEW scan-view)
 find_program_or_warn(SCANBUILDPY scan-build-py)
