--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04]
-        version: [11, 12, 13, 14]
+        version: [10, 11, 12, 13, 14]
     steps:
       - uses: actions/checkout@v2
 
