--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,10 @@
 name: Build with different version
-on: [push, pull_request]
-
+on: 
+  push:
+  pull_request:
+  schedule:
+    - cron: "0 2 * * *"
+  
 jobs:
   build:
     runs-on: ${{ matrix.os }}
