--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Dependencies
         run: |
             sudo dnf install -y llvm-devel clang-devel cmake make python3-lit lld clang-tools-extra gcc gcc-c++ libcxx-devel compiler-rt libstdc++-devel \
-                                glibc-static libstdc++-static
+                                glibc-static libstdc++-static mlir
       - name: Run the testsuite
         run: |
          mkdir build && cd build
