--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -3,7 +3,7 @@ import lit
 
 config.name = 'LLVM regression suite'
 config.test_format = lit.formats.ShTest(True)
-config.suffixes = ['.ll', '.c', '.cpp', '.test', '.txt', '.s', '.mir']
+config.suffixes = ['.ll', '.c', '.cpp', '.test', '.txt', '.s', '.mir', '.mlir']
 config.test_source_root = os.path.join("@CMAKE_CURRENT_SOURCE_DIR@", "tests")
 config.excludes = ['Inputs']
 
@@ -39,6 +39,7 @@ enable_program('scan-build-py', "@SCANBUILDPY@")
 enable_program('scan-build', "@SCANBUILD@")
 enable_program('scan-view', "@SCANVIEW@")
 enable_program('opt', "@OPT_BINARY@")
+enable_program('mlir-translate', "@MLIRTRANSLATE@")
 
 config.substitutions.append(('%cmake', '@CMAKE_COMMAND@'))
 
