add mlir-devel to fedora

--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -14,8 +14,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Dependencies
         run: |
-            sudo dnf install -y llvm-devel clang-devel cmake make python3-lit lld clang-tools-extra gcc gcc-c++ libcxx-devel compiler-rt libstdc++-devel \
-                                glibc-static libstdc++-static mlir
+            sudo dnf install -y llvm-devel clang-devel cmake make python3-lit \
+                 lld clang-tools-extra gcc gcc-c++ libcxx-devel compiler-rt libstdc++-devel \
+                 glibc-static libstdc++-static mlir mlir-devel
       - name: Run the testsuite
         run: |
          mkdir build && cd build
