--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -7,6 +7,8 @@ config.suffixes = ['.ll', '.c', '.cpp', '.test', '.txt', '.s', '.mir', '.mlir']
 config.test_source_root = os.path.join("@CMAKE_CURRENT_SOURCE_DIR@", "tests")
 config.excludes = ['Inputs']
 
+config.available_features.add("@CMAKE_HOST_SYSTEM_PROCESSOR@")
+
 def enable_feature(name, option):
     if option.lower() in ('on', 1):
         config.available_features.add(name)
