--- a/tests/mlir_dialect/CMakeLists.txt
+++ b/tests/mlir_dialect/CMakeLists.txt
@@ -1,3 +1,4 @@
+project(mlir_out_of_tree)
 set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "")
 set(CMAKE_INSTALL_MESSAGE LAZY CACHE STRING "" FORCE)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE BOOL "")
