Disable test old LLVM 10 + 11

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,9 +54,12 @@ jobs:
          export PATH=$PATH:/usr/share/clang/scan-build-py-${{ matrix.version }}/bin/:/usr/lib/llvm-${{ matrix.version }}/libexec
          mkdir build && cd build
          LIBUNWIND_ENABLED=ON
+         STATIC_LIBCXX_ENABLED=ON
          if test ${{ matrix.version }} -lt 12; then
             # Libunwind has been packaged only from 12
             LIBUNWIND_ENABLED=OFF
+            # libc++.a did not link libc++abi.a on old versions
+            STATIC_LIBCXX_ENABLED=OFF
          fi
          cmake -DLIT=/usr/lib/llvm-${{ matrix.version }}/build/utils/lit/lit.py \
            -DCLANG_BINARY=/usr/bin/clang-${{ matrix.version }} \
@@ -82,6 +85,7 @@ jobs:
            -DLLVMPROFDATA=/usr/bin/llvm-profdata-${{ matrix.version }} \
            -DENABLE_COMPILER_RT=ON \
            -DENABLE_LIBCXX=ON \
+           -DENABLE_STATIC_LIBCXX=$STATIC_LIBCXX_ENABLED \
            -DENABLE_LIBUNWIND=$LIBUNWIND_ENABLED \
            ../
          # debug the output
