--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -51,3 +51,4 @@ enable_feature("compiler-rt", "@ENABLE_COMPILER_RT@")
 enable_feature("libc++", "@ENABLE_LIBCXX@")
 enable_feature("static-libc++", "@ENABLE_STATIC_LIBCXX@")
 enable_feature("libunwind", "@ENABLE_LIBUNWIND@")
+enable_feature("support_hwasan", "@ENABLE_HWASAN@")
