--- a/tests/lit.site.cfg.in
+++ b/tests/lit.site.cfg.in
@@ -57,3 +57,4 @@ enable_feature("libc++", "@ENABLE_LIBCXX@")
 enable_feature("static-libc++", "@ENABLE_STATIC_LIBCXX@")
 enable_feature("libunwind", "@ENABLE_LIBUNWIND@")
 enable_feature("support_hwasan", "@ENABLE_HWASAN@")
+enable_feature("float16", "@ENABLE_FLOAT16@")
